--- a/index.html
+++ b/index.html
@@ -162,30 +162,45 @@
         <div class="desktop">
           <ul class="progress-indicator">
             <li class="completed">
-              <span class="bubble"></span>
-              Lorem ipsum <br>
-            </li>
-            <li class="completed">
-              <span class="bubble"></span>
+              <span class="bubble">
+                <div class="overlay"></div>
+              </span>
               Lorem ipsum <br>
             </li>
             <li class="active">
-              <span class="bubble"></span>
+              <span class="bubble">
+                <div class="overlay"></div>
+              </span>
               Lorem ipsum <br>
             </li>
             <li>
-              <span class="bubble"></span>
+              <span class="bubble">
+                <div class="overlay"></div>
+              </span>
+              Lorem ipsum <br>
+            </li>
+            <li>
+              <span class="bubble">
+                <div class="overlay"></div>
+              </span>
               Lorem ipsum
             </li>
             <li>
-              <span class="bubble"></span>
+              <span class="bubble">
+                <div class="overlay"></div>
+              </span>
               Lorem ipsum
             </li>
           </ul>
         </div>
-        <div class="mobile"></div>
-        <div class="progress-indicator progress-30">
-          <div class="overlay">1 of 5</div>
+        <div class="mobile">
+          <div class="progress-indicator progress-30">
+            <div class="overlay">1 of 5</div>
+          </div>
+          <div class="progress-label">
+            <h4>Lorem Ipsum</h4>
+            <small>next: dolor sit</small>
+          </div>
         </div>
       </div>
       <div class="steps">
@@ -244,121 +259,126 @@
     </div>
   </div>
   <footer>
-    <div class="links">
-      <a href="/">
-        Lorem ipsum dolor
-      </a>
-      <a href="/">
-        Lorem ipsum dolor
-      </a>
-      <a href="/">
-        Lorem ipsum dolor
-      </a>
-      <a href="/">
-        Lorem ipsum dolor
-      </a>
-      <a href="/">
-        Lorem ipsum dolor
-      </a>
-      <a href="/">
-        Lorem ipsum dolor
-      </a>
-    </div>
-    <div class="logo">
-      <a href="/">
-        <svg
-          version="1.1"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px"
-          y="0px"
-          width="124.8px"
-          height="20.3px"
-          viewBox="0 0 124.8 20.3"
-          style="overflow:visible;enable-background:new 0 0 124.8 20.3;"
-          xml:space="preserve"
-        >
-          <defs>
-          </defs>
-          <g>
-            <polygon
-              fill="#606060"
-              points="119,10.1 116.9,8 109.1,0.2 104.9,4.3 110.7,10.1 104.9,15.9 109.1,20.1 114.9,14.3 120.7,20.1
+    <div>
+      <div class="links">
+        <div>
+          <a href="/">
+            Lorem ipsum dolor
+          </a>
+          <a href="/">
+            Lorem ipsum dolor
+          </a>
+          <a href="/">
+            Lorem ipsum dolor
+          </a>
+        </div>
+        <div>
+          <a href="/">
+            Lorem ipsum dolor
+          </a>
+          <a href="/">
+            Lorem ipsum dolor
+          </a>
+          <a href="/">
+            Lorem ipsum dolor
+          </a>
+        </div>
+      </div>
+      <div class="logo">
+        <a href="/">
+          <svg
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px"
+            y="0px"
+            width="124.8px"
+            height="20.3px"
+            viewBox="0 0 124.8 20.3"
+            style="overflow:visible;enable-background:new 0 0 124.8 20.3;"
+            xml:space="preserve"
+          >
+            <defs>
+            </defs>
+            <g>
+              <polygon
+                fill="#606060"
+                points="119,10.1 116.9,8 109.1,0.2 104.9,4.3 110.7,10.1 104.9,15.9 109.1,20.1 114.9,14.3 120.7,20.1
 		124.8,15.9 	"
-            />
-            <rect
-              x="117.8"
-              y="1.4"
-              transform="matrix(0.7071 -0.7071 0.7071 0.7071 32.3146 86.6045)"
-              fill="#606060"
-              width="5.9"
-              height="5.9"
-            />
-            <polygon
-              fill="#606060"
-              points="0,0.1 0,4 5.7,4 5.7,20.1 9.9,20.1 9.9,4 15.6,4 15.6,0.1 	"
-            />
-            <g>
-              <path
+              />
+              <rect
+                x="117.8"
+                y="1.4"
+                transform="matrix(0.7071 -0.7071 0.7071 0.7071 32.3146 86.6045)"
                 fill="#606060"
-                d="M24.8,9.8c0,0-0.4-0.1-1.3-0.1c-2,0-3.3,1.3-3.3,3.7v6.7h-3.8V6.1h3.8v1.7c0,0,1.4-1.8,4-1.8h0.6L24.8,9.8
+                width="5.9"
+                height="5.9"
+              />
+              <polygon
+                fill="#606060"
+                points="0,0.1 0,4 5.7,4 5.7,20.1 9.9,20.1 9.9,4 15.6,4 15.6,0.1 	"
+              />
+              <g>
+                <path
+                  fill="#606060"
+                  d="M24.8,9.8c0,0-0.4-0.1-1.3-0.1c-2,0-3.3,1.3-3.3,3.7v6.7h-3.8V6.1h3.8v1.7c0,0,1.4-1.8,4-1.8h0.6L24.8,9.8
 			L24.8,9.8z"
+                />
+                <path
+                  fill="#606060"
+                  d="M29.1,4.3c-1.3,0-2.1-0.9-2.1-2.1S27.8,0,29.1,0c1.4,0,2.3,0.9,2.3,2.1C31.4,3.4,30.6,4.3,29.1,4.3"
+                />
+              </g>
+              <rect
+                x="27.3"
+                y="6.1"
+                fill="#606060"
+                width="3.8"
+                height="13.9"
+              />
+              <rect
+                x="35.3"
+                y="0.1"
+                fill="#606060"
+                width="3.8"
+                height="19.9"
+              />
+              <rect
+                x="43.3"
+                y="0.1"
+                fill="#606060"
+                width="3.8"
+                height="19.9"
+              />
+              <g>
+                <path
+                  fill="#606060"
+                  d="M53.2,4.3c-1.3,0-2.1-0.9-2.1-2.1S52,0,53.2,0c1.4,0,2.3,0.9,2.3,2.1C55.5,3.4,54.7,4.3,53.2,4.3"
+                />
+              </g>
+              <rect
+                x="51.4"
+                y="6.1"
+                fill="#606060"
+                width="3.8"
+                height="13.9"
               />
               <path
                 fill="#606060"
-                d="M29.1,4.3c-1.3,0-2.1-0.9-2.1-2.1S27.8,0,29.1,0c1.4,0,2.3,0.9,2.3,2.1C31.4,3.4,30.6,4.3,29.1,4.3"
-              />
-            </g>
-            <rect
-              x="27.3"
-              y="6.1"
-              fill="#606060"
-              width="3.8"
-              height="13.9"
-            />
-            <rect
-              x="35.3"
-              y="0.1"
-              fill="#606060"
-              width="3.8"
-              height="19.9"
-            />
-            <rect
-              x="43.3"
-              y="0.1"
-              fill="#606060"
-              width="3.8"
-              height="19.9"
-            />
-            <g>
-              <path
-                fill="#606060"
-                d="M53.2,4.3c-1.3,0-2.1-0.9-2.1-2.1S52,0,53.2,0c1.4,0,2.3,0.9,2.3,2.1C55.5,3.4,54.7,4.3,53.2,4.3"
-              />
-            </g>
-            <rect
-              x="51.4"
-              y="6.1"
-              fill="#606060"
-              width="3.8"
-              height="13.9"
-            />
-            <path
-              fill="#606060"
-              d="M68.6,18.6c0,0-1.4,1.7-4,1.7c-3.1,0-5.4-2.3-5.4-5.9V6.1h3.8v8c0,1.6,1.1,2.7,2.7,2.7c1.7,0,2.8-1.1,2.8-3.3
+                d="M68.6,18.6c0,0-1.4,1.7-4,1.7c-3.1,0-5.4-2.3-5.4-5.9V6.1h3.8v8c0,1.6,1.1,2.7,2.7,2.7c1.7,0,2.8-1.1,2.8-3.3
 		V6.1h3.8v13.9h-3.8L68.6,18.6L68.6,18.6z"
-            />
-            <path
-              fill="#606060"
-              d="M94,12.4c0-1.8-1-2.8-2.3-2.8c-1.4,0-2.6,1.1-2.6,3.3v7.3h-3.8v-7.7c0-1.8-1-2.8-2.3-2.8
+              />
+              <path
+                fill="#606060"
+                d="M94,12.4c0-1.8-1-2.8-2.3-2.8c-1.4,0-2.6,1.1-2.6,3.3v7.3h-3.8v-7.7c0-1.8-1-2.8-2.3-2.8
 		c-1.4,0-2.6,1.1-2.6,3.3v7.3h-3.8V6.1h3.8v1.7c0,0,1.3-2,3.7-2c3,0,4,2.4,4,2.4s1.6-2.4,4.7-2.4c3,0,5,2,5,6.1v8.1H94V12.4z"
-            />
-          </g>
-        </svg>
-      </a>
+              />
+            </g>
+          </svg>
+        </a>
+      </div>
     </div>
   </footer>
-  </div>
 </body>
 
 </html>
