sass dev; remove manifest.json

--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
     content="Abdul's test"
   />
   <title>Trillium - Abdul's test</title>
-  <link
-    rel="manifest"
-    href="/manifest.json"
-  />
   <meta
     name="theme-color"
-    content="#18ef7b"
+    content="#32135B"
   />
   <link
     rel="shortcut icon"
